--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,7 +7,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFDE03">
+    android:background="#FF0DBFAC">
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
