--- a/app/src/main/res/layout/activity_advent.xml
+++ b/app/src/main/res/layout/activity_advent.xml
@@ -2,10 +2,10 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f2f2f2"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -18,20 +18,13 @@
             android:id="@+id/toolbar"
             layout="@layout/layout_toolbar" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pilih Dokter Spesialis :"
-            android:textColor="#000"
-            android:background="#696969"
-            android:textSize="24dp" />
+        <android.support.v7.widget.RecyclerView
 
-        <ListView
             android:id="@+id/idSpesialis"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </ListView>
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
