--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorPrimary">@color/common_google_signin_btn_text_dark_disabled</item>
-        <item name="colorPrimaryDark">@color/common_google_signin_btn_text_dark_disabled</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorForeground">@color/foreground_material_dark</item>
         <item name="android:colorBackground">@color/background_material_dark</item>
+        <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
 
         <!-- Customize your theme here. -->
     </style>
