--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -2,17 +2,14 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FF0DBFAC"
-        android:measureWithLargestChild="false"
         android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
@@ -72,21 +69,21 @@
                             android:layout_height="wrap_content"
                             android:background="#FFF"
                             android:padding="20dp"
-                            android:onClick="KlikDadi">
+                            android:onClick="KlikBumiWaras">
 
                             <ImageView
                                 android:id="@+id/imageview"
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 android:layout_marginRight="20dp"
-                                android:src="@drawable/rs_a_dadi_tjokrodipo" />
+                                android:src="@drawable/rs_bumi_waras" />
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_toRightOf="@+id/imageview"
-                                android:text="RS. A. Dadi Tjokrodipo"
+                                android:text="RS. Bumi Waras"
                                 android:textColor="#000"
                                 android:textSize="12dp"
                                 android:textStyle="bold" />
@@ -288,5 +285,5 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/layout_header"
-        app:menu="@menu/item_navigasi" />
+        app:menu="@menu/item_navigasi"/>
 </android.support.v4.widget.DrawerLayout>
